--- a/copy.odoo-postgres.docker-compose.yaml
+++ b/copy.odoo-postgres.docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     image: ${WEB_IMAGE_NAME}
     depends_on:
       - db
+    USER: root
     ports:
       - "${WEB_PORT}:8069"
       - "${WEBSOCKET_PORT}:8072"
