--- a/copy.odoo-postgres.docker-compose.yaml
+++ b/copy.odoo-postgres.docker-compose.yaml
@@ -10,10 +10,10 @@ services:
       - "${WEB_PORT}:8069"
       - "${WEBSOCKET_PORT}:8072"
     volumes:
-      - odoo-web-data:/var/lib/odoo
-      - ./config:/etc/odoo
-      - ./addons:/mnt/extra-addons
-    entrypoint: "/usr/bin/odoo -c /etc/odoo/odoo.conf"
+      - odoo-web-data:/var/lib/odoo/
+      #- ./config:/etc/odoo/
+      - ./addons:/mnt/extra-addons/
+    #entrypoint: "/usr/bin/odoo -c /etc/odoo/odoo.conf"
   db:
     container_name: ${DB_HOST}
     image: ${DB_IMAGE}
