--- a/copy.odoo-postgres.docker-compose.yaml
+++ b/copy.odoo-postgres.docker-compose.yaml
@@ -7,13 +7,13 @@ services:
       - db
     user: root
     ports:
-      - "${WEB_PORT}:8069"
+      - "${WEB_PORT}:8089"
       - "${WEBSOCKET_PORT}:8072"
     volumes:
       - odoo-web-data:/var/lib/odoo/
-      #- ./config:/etc/odoo/
+      - ./config:/etc/odoo/
       - ./addons:/mnt/extra-addons/
-    #entrypoint: "/usr/bin/odoo -c /etc/odoo/odoo.conf"
+    entrypoint: "/usr/bin/odoo -c /etc/odoo/odoo.conf"
   db:
     container_name: ${DB_HOST}
     image: ${DB_IMAGE}
